--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "rollup-plugin-multi-input": "^1.3.0",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.2.4"
+  },
+  "release-it": {
+    "github": {
+      "release": true
+    }
   }
 }
